--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "gray-matter": "^4.0.2",
     "next": "9.5.3",
+    "node-fetch": "^2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.10",
